<resources>
    <string name="app_name">DepHub</string>

    <string name="welcome_message">Happy Coding</string>

    <string name="welcome_text">Welcome👋</string>
    <string name="login_desc">Don\'t search for dependencies anymore</string>
    <string name="login_welcome_image">Welcome Image</string>
    <string name="login_continue">Continue Now</string>

    <string name="submit_desc">Thank you for showing your interest in submitting your dependency. Please fill the details below.</string>
    <string name="submit_dependency_name">Dependency Name</string>
    <string name="submit_toast">Toast</string>
    <string name="submit_dependency_url">Dependency URL</string>
    <string name="submit_https">https://</string>
    <string name="submit_dependency_description">Dependency Description</string>
    <string name="submit_about">About</string>
    <string name="submit_submit_btn">Submit</string>

    <string name="feedback_submit">Submit</string>
    <string name="mail_my_feedback">Mail My Feedback</string>
    <string name="write_here">Write here...</string>
    <string name="img_attachment">If any image attachments, Mail us</string>
    <string name="your_feedback">Your feedback</string>
    <string name="feedback_title">Please write your feedback at least using ten words. We will contact you as soon as possible.</string>

    <string name="settings_message">Good Morning User</string>

    <string name="credits_github">1. GitHub</string>
    <string name="credits_flaticon">2. Flaticon</string>
    <string name="credits_storyset">3. Storyset</string>
    <string name="credits_title">We would like to Thank all these three platforms mentioned below:</string>

    <string name="cardview_developer_name">Developer Name</string>
    <string name="cardview_dependency_name">Dependency Name</string>
    <string name="cardview_developed_by">Developed By :</string>

    <string name="search_not_found">Not Found.. No Problem</string>
    <string name="search_submit">Submit your Dependency</string>
    <string name="search_zero_results">0 results found</string>

    <string name="search">Search</string>
    <string name="submit_dependency">Submit Dependency</string>
    <string name="settings">Settings</string>

    <string name="short_label">Home</string>
    <string name="long_label">Home</string>
    <string name="disabled_message">Sorry for the inconvenience caused</string>
</resources>