<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darktoggle"
    android:overScrollMode="never">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbarsyd"
        android:background="@color/whitetoblack"
        android:overScrollMode="never">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/dependencyname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/thanks"
                android:layout_marginTop="25sp">

                <EditText
                    android:id="@+id/etdepname"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="25sp"
                    android:layout_marginTop="35sp"
                    android:layout_marginRight="25sp"
                    android:background="@drawable/formedittextbg"
                    android:elevation="20sp"
                    android:ems="10"
                    android:fontFamily="@font/sans"
                    android:hint="@string/submit_toast"
                    android:inputType="textCapWords"
                    android:paddingStart="25sp"
                    android:paddingEnd="25sp"
                    android:textColor="@color/edittext"
                    android:textColorHint="@color/edittexthint"
                    android:windowSoftInputMode="adjustResize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:fontFamily="@font/sans"
                    android:text="@string/submit_dependency_name"
                    android:textColor="@color/blacktowhite"
                    android:textSize="16.5sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/dependencyurl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dependencyname"
                android:layout_marginTop="25sp">

                <EditText
                    android:id="@+id/etdepurl"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="25sp"
                    android:layout_marginTop="35sp"
                    android:layout_marginRight="25sp"
                    android:background="@drawable/formedittextbg"
                    android:elevation="20sp"
                    android:ems="10"
                    android:fontFamily="@font/sans"
                    android:hint="@string/submit_https"
                    android:inputType="text"
                    android:paddingStart="25sp"
                    android:paddingEnd="25sp"
                    android:textColor="@color/edittext"
                    android:textColorHint="@color/edittexthint"
                    android:windowSoftInputMode="adjustResize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:fontFamily="@font/sans"
                    android:text="@string/submit_dependency_url"
                    android:textColor="@color/blacktowhite"
                    android:textSize="16.5sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dependencyurl"
                android:layout_marginTop="25sp">

                <Button
                    android:id="@+id/formsubmit"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etdepdes"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25sp"
                    android:layout_marginBottom="25sp"
                    android:background="@drawable/roundedcorner"
                    android:elevation="12dp"
                    android:fontFamily="@font/sans"
                    android:text="@string/submit_submit_btn"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorAccent" />

                <EditText
                    android:id="@+id/etdepdes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="25sp"
                    android:layout_marginTop="35sp"
                    android:layout_marginRight="25sp"
                    android:background="@drawable/formedittextbg"
                    android:elevation="20sp"
                    android:ems="10"
                    android:fontFamily="@font/sans"
                    android:hint="@string/submit_about"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLines="7"
                    android:overScrollMode="always"
                    android:padding="10sp"
                    android:paddingStart="25sp"
                    android:paddingEnd="25sp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textColor="@color/edittext"
                    android:textColorHint="@color/edittexthint"
                    android:windowSoftInputMode="adjustResize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:fontFamily="@font/sans"
                    android:text="@string/submit_dependency_description"
                    android:textColor="@color/blacktowhite"
                    android:textSize="16.5sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/thanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:fontFamily="@font/sans"
                android:text="@string/submit_desc"
                android:textColor="@color/blacktowhite"
                android:textSize="16sp"
                android:textStyle="normal" />

        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarsyd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarsubmityourdependency"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:titleTextAppearance="@style/toolbartextentity" />

    </com.google.android.material.appbar.AppBarLayout>

</RelativeLayout>