<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_toggle"
    android:overScrollMode="never">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar_feedback"
        android:background="@color/dark_toggle"
        android:overScrollMode="never">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/user_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/feedback_description"
                android:layout_marginTop="25dp">

                <Button
                    android:id="@+id/feedback_submit"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_prob"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/ic_rounded_button"
                    android:fontFamily="@font/sans"
                    android:text="@string/feedback_submit"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorAccent"
                    app:cornerRadius="30dp" />

                <Button
                    android:id="@+id/mail_us"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_attachment"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/ic_rounded_button"
                    android:elevation="20dp"
                    android:fontFamily="@font/sans"
                    android:text="@string/mail_my_feedback"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorAccent"
                    app:cornerRadius="30dp" />

                <EditText
                    android:id="@+id/user_prob"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/ic_input_rounded"
                    android:elevation="20dp"
                    android:ems="10"
                    android:fontFamily="@font/sans"
                    android:hint="@string/write_here"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:overScrollMode="always"
                    android:padding="10dp"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textColor="@color/edittext"
                    android:textColorHint="@color/edittext_hint"
                    android:windowSoftInputMode="adjustResize" />

                <TextView
                    android:id="@+id/image_attachment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/feedback_submit"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/sans"
                    android:text="@string/img_attachment"
                    android:textAlignment="center"
                    android:textColor="@color/black_to_white"
                    android:textSize="16.5sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:fontFamily="@font/sans"
                    android:text="@string/your_feedback"
                    android:textColor="@color/black_to_white"
                    android:textSize="16.5sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/feedback_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:fontFamily="@font/sans"
                android:text="@string/feedback_title"
                android:textColor="@color/black_to_white"
                android:textSize="17sp"
                android:textStyle="normal" />

        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_write_feedback"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:titleTextAppearance="@style/toolbar_text_entity" />

    </com.google.android.material.appbar.AppBarLayout>
</RelativeLayout>