<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_to_black">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="14dp"
        app:cardBackgroundColor="@color/white_to_black"
        app:cardCornerRadius="18sp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_input_rounded">

            <ImageButton
                android:id="@+id/github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="18dp"
                android:background="#00000000"
                android:src="@drawable/ic_github" />

            <ImageButton
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="10dp"
                android:background="#00000000"
                android:src="@drawable/ic_share" />

            <TextView
                android:id="@+id/dev_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="17dp"
                android:layout_toRightOf="@id/developed_by"
                android:fontFamily="@font/sans"
                android:letterSpacing="0.05"
                android:maxLines="1"
                android:text="@string/cardview_developer_name"
                android:textAlignment="center"
                android:textColor="@color/black_to_white"
                android:textSize="14.25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dep_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_toLeftOf="@id/github"
                android:fontFamily="@font/sans"
                android:maxLines="1"
                android:text="@string/cardview_dependency_name"
                android:textColor="@color/black_to_white"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/developed_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15sp"
                android:layout_marginBottom="18sp"
                android:fontFamily="@font/sans"
                android:text="@string/cardview_developed_by"
                android:textColor="@color/black_to_white"
                android:textSize="13.5sp"
                android:textStyle="normal" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>

